-correction: -header, -thoth section`s logic;

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -4,32 +4,27 @@
             <img class="header__logo logo for-desc" src="../img/ico/logo.svg" alt="">
             <nav class="header__nav">
                 <ul class="header__menu menu">
-                    <a href="#about">
-                        <li class="menu__item menu-items-txt">Описание</li>
+                    <a href="#holostand">
+                        <li class="menu__item menu-items-txt">Kelpie holostand</li>
                     </a>
-                    <a href="#characteristics">
-                        <li class="menu__item menu-items-txt">Характеристики</li>
+                    <a href="#">
+                        <li class="menu__item menu-items-txt">Технологии</li>
                     </a>
-                    <a href="#video">
-                        <li class="menu__item menu-items-txt">Видео</li>
+                    <a href="#">
+                        <li class="menu__item menu-items-txt">Сценарии использования</li>
                     </a>
-                    <a href="#rent">
-                        <li class="menu__item menu-items-txt">Аренда и контент</li>
-                    </a>
-                    <a href="#portfolio">
+                    <a href="#">
                         <li class="menu__item menu-items-txt">Портфолио</li>
                     </a>
-                    <a href="#feedback">
-                        <li class="menu__item menu-items-txt">Связаться</li>
+                    <a href="#">
+                        <li class="menu__item menu-items-txt">Контакты</li>
                     </a>
-                    <button class="button button_transparent mob-menu__button" data-href="#rent">Купить</button>
-                    <button class="button button_purple-text mob-menu__button" data-href="#feedback">Обратная связь</button>
                 </ul>
             </nav>
-<!--            <div class="mob-menu__buttons">-->
-<!--                <button class="button button_transparent mob-menu__button" data-href="#rent">Купить</button>-->
-<!--                <button class="button button_purple-text mob-menu__button" data-href="#feedback">Обратная связь</button>-->
-<!--            </div>-->
+            <div class="header-contacts__buttons">
+                <button class="button button_transparent" data-href="#rent">Купить</button>
+                <button class="button button_purple-text" data-href="#feedback">Обратная связь</button>
+            </div>
         </div>
         <nav class="header__subnav for-desc-block">
             <ul class="header__submenu">
@@ -50,42 +45,35 @@
         </div>
         <div class="mob-menu__nav">
             <a href="#holostand">
-                <li class="mob-menu__items">Описание</li>
+                <li class="mob-menu__items">Kelpie holostand</li>
                 <div class="sub-mob-menu">
 
                 </div>
             </a>
 
             <a href="#characteristics">
-                <li class="mob-menu__items">Характеристики</li>
+                <li class="mob-menu__items">Технологии</li>
                 <div class="sub-mob-menu">
 
                 </div>
             </a>
 
-            <a href="#video">
-                <li class="mob-menu__items">Видео</li>
+            <a href="#interactive">
+                <li class="mob-menu__items">Сценарии использования</li>
                 <div class="sub-mob-menu">
 
                 </div>
             </a>
 
-            <a href="#rent">
-                <li class="mob-menu__items">Аренда и контент</li>
-                <div class="sub-mob-menu">
-
-                </div>
-            </a>
-
-            <a href="#portfolio">
+            <a href="#using">
                 <li class="mob-menu__items">Портфолио</li>
                 <div class="sub-mob-menu">
 
                 </div>
             </a>
 
-            <a href="#feedback">
-                <li class="mob-menu__items">Связаться</li>
+            <a href="#rent">
+                <li class="mob-menu__items">Контакты</li>
                 <div class="sub-mob-menu">
 
                 </div>
