-correction: fourth section;

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -32,7 +32,7 @@
             <div class="footer__part footer__right">
                 <address>г. Новосибирск, ул. Депутатская 58/1<br>(2 этаж)</address>
                 <p>Пн-Пт с 09:00 до 18:00</p>
-                <p>+7 (383) 209-91-91</p>
+                <a href="tel:73832099191">+7 (383) 209-91-91</a>
                 <div class="footer__socials socials">
                     <a href="https://vk.com/gefestnovosib" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/vk-ico.svg" alt=""></div></a>
                     <a href="https://www.youtube.com/@gefestcapitalgroup" target="_blank"><div class="socials__item"><img class="socials__ico" src="../img/ico/youtube-ico.svg" alt=""></div></a>
