--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -300,7 +300,7 @@
 		</div>
 	</section>
 	<section class="screen four-screen scrolling-item">
-		<div class="container-page-margin">
+		<div class="container-page-margin four-screen__container-mob">
 			<div class="socials abolusteY-center for-desc-flex">
 				<div class="socials__item">
 					<a href="https://vk.com/gefestnovosib" target="_blank"><img class="socials__ico"
@@ -321,27 +321,27 @@
 
 			<div class="four-screen__bcg container-content container-content--no-margin">
 				<div class="container-relative">
-					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-1-item.png" alt="" />
-					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-3-item.png" alt="" />
-					<img class="four-screen__rama-item" src="../img/Product-page/4-screen-2-item.png" alt="" />
-					<div class="four-screen__rama">
-<!--						<div class="four-screen__rama-blur"></div>-->
-						<img class="four-screen__rama-img" src="../img/Product-page/4-screen-rama-blur.png" alt="" />
-					</div>
-					<div class="four-screen__buttons for-desc-flex">
-						<button class="button second-screen__button four-screen__button">
-							<img src="../img/ico/infographics.svg" alt="" />
-							<p>Инфографика</p>
-						</button>
-						<button class="button second-screen__button four-screen__button">
-							<img src="../img/ico/vr.svg" alt="" />
-							<p>AR</p>
-						</button>
-						<button class="button second-screen__button four-screen__button">
-							<img src="../img/ico/photo.svg" alt="" />
-							<p>Фото</p>
-						</button>
-					</div>
+						<img class="four-screen__rama-item" src="../img/Product-page/4-screen-1-item.png" alt=""/>
+						<img class="four-screen__rama-item" src="../img/Product-page/4-screen-3-item.png" alt=""/>
+						<img class="four-screen__rama-item" src="../img/Product-page/4-screen-2-item.png" alt=""/>
+						<div class="four-screen__rama">
+							<!--						<div class="four-screen__rama-blur"></div>-->
+							<img class="four-screen__rama-img" src="../img/Product-page/4-screen-rama-blur.png" alt=""/>
+						</div>
+						<div class="four-screen__buttons">
+							<button class="button second-screen__button four-screen__button">
+								<img src="../img/ico/infographics.svg" alt=""/>
+								<p>Инфографика</p>
+							</button>
+							<button class="button second-screen__button four-screen__button">
+								<img src="../img/ico/vr.svg" alt=""/>
+								<p>AR</p>
+							</button>
+							<button class="button second-screen__button four-screen__button">
+								<img src="../img/ico/photo.svg" alt=""/>
+								<p>Фото</p>
+							</button>
+						</div>
 				</div>
 			</div>
 		</div>
