-correction: from Vlad;

--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -330,19 +330,22 @@
 						</div>
 						<div class="four-screen__buttons">
 							<button class="button second-screen__button four-screen__button">
-								<img src="../img/ico/infographics.svg" alt=""/>
-								<p>Инфографика</p>
+								<!--<img src="../img/ico/infographics.svg" alt=""/>-->
+								<!--<p>Инфографика</p>-->
+								<div class="tab__key tab__key--four-screen rent-content__tab-key  rent-content__tab-dot rent-content__tab-dot--four-screen">Инфографика</div>
 							</button>
 							<button class="button second-screen__button four-screen__button">
-								<img src="../img/ico/vr.svg" alt=""/>
-								<p>AR</p>
+<!--								<img src="../img/ico/vr.svg" alt=""/>-->
+<!--								<p>AR</p>-->
+								<div class="tab__key tab__key--four-screen rent-content__tab-key  rent-content__tab-dot rent-content__tab-dot--four-screen">AR</div>
 							</button>
 							<button class="button second-screen__button four-screen__button">
-								<img src="../img/ico/photo.svg" alt=""/>
-								<p>Фото</p>
+<!--								<img src="../img/ico/photo.svg" alt=""/>-->
+<!--								<p>Фото</p>-->
+								<div class="tab__key tab__key--four-screen rent-content__tab-key  rent-content__tab-dot rent-content__tab-dot--four-screen">Фото</div>
 							</button>
 						</div>
-				</div>
+				</div><!--
 			</div>
 		</div>
 	</section>
@@ -555,7 +558,7 @@
 											<input class="form-mail-js" type="email" id="email" name="email" placeholder="Ваш email" />
 										</div>
 										<button
-											class="rent-content-form__submit button button_purple-text button_submit"
+											class="rent-content-form__submit button button_purple-text button_purple-text--submit button_submit"
 											type="submit">
 											Отправить
 										</button>
@@ -585,16 +588,20 @@
 										<p class="six-screen-anim">Условия размещения</p>
 										<div class="rent-content__conditionals-items six-screen-anim near-form">
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
-<!--												<div class="tab__dot"></div>-->
-												<div class="tab__key rent-content__tab-key rent-content__tab-dot">свободное пространство - <span class="spans-highlight">1м<sup class="txt-10">2</sup></span></div>
+												<div class="tab__dot tab__dot--rent"></div>
+												<div class="tab__key rent-content__tab-key">свободное пространство - </div>
+												<div class="tab__value spans-highlight">1м<sup class="txt-10">2</sup></div>
+<!--												<div class="tab__key rent-content__tab-key rent-content__tab-dot">свободное пространство - <span class="spans-highlight">1м<sup class="txt-10">2</sup></span></div>-->
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
-<!--												<div class="tab__dot"></div>-->
-												<div class="tab__key rent-content__tab-key rent-content__tab-dot">питание - <span class="spans-highlight">220В</span></div>
+												<div class="tab__dot tab__dot--rent"></div>
+												<div class="tab__key rent-content__tab-key">питание - </div>
+												<div class="tab__value spans-highlight">220В</div>
+<!--												<div class="tab__key rent-content__tab-key rent-content__tab-dot">питание - <span class="spans-highlight">220В</span></div>-->
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
-<!--												<div class="tab__dot"></div>-->
-												<div class="tab__key rent-content__tab-key rent-content__tab-dot">
+												<div class="tab__dot tab__dot--rent"></div>
+												<div class="tab__key rent-content__tab-key">
 													наличие свободного пространства позади для эффекта прозрачности
 												</div>
 											</div>
