-correction: from Vlad

--- a/src/html/product-page.html
+++ b/src/html/product-page.html
@@ -330,18 +330,15 @@
 						</div>
 						<div class="four-screen__buttons">
 							<button class="button second-screen__button four-screen__button">
-								<!--<img src="../img/ico/infographics.svg" alt=""/>-->
-								<!--<p>Инфографика</p>-->
+								<img class="four-screen__icons abolusteY-center" src="../img/ico/infographics.svg" alt=""/>
 								<div class="tab__key tab__key--four-screen rent-content__tab-key  rent-content__tab-dot rent-content__tab-dot--four-screen">Инфографика</div>
 							</button>
 							<button class="button second-screen__button four-screen__button">
-<!--								<img src="../img/ico/vr.svg" alt=""/>-->
-<!--								<p>AR</p>-->
+								<img class="four-screen__icons abolusteY-center" src="../img/ico/vr.svg" alt=""/>
 								<div class="tab__key tab__key--four-screen rent-content__tab-key  rent-content__tab-dot rent-content__tab-dot--four-screen">AR</div>
 							</button>
 							<button class="button second-screen__button four-screen__button">
-<!--								<img src="../img/ico/photo.svg" alt=""/>-->
-<!--								<p>Фото</p>-->
+								<img class="four-screen__icons abolusteY-center" src="../img/ico/photo.svg" alt=""/>
 								<div class="tab__key tab__key--four-screen rent-content__tab-key  rent-content__tab-dot rent-content__tab-dot--four-screen">Фото</div>
 							</button>
 						</div>
@@ -538,7 +535,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="list-item mt-40">
+								<div class="list-item mt-40 six-screen-anim">
 									 <sup class="txt-10">*</sup>третий день аренды
 									<span>бесплатно</span>
 								</div>
@@ -589,13 +586,13 @@
 										<div class="rent-content__conditionals-items six-screen-anim near-form">
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
 												<div class="tab__dot tab__dot--rent"></div>
-												<div class="tab__key rent-content__tab-key">свободное пространство - </div>
-												<div class="tab__value spans-highlight">1м<sup class="txt-10">2</sup></div>
+												<div class="tab__key rent-content__tab-key">свободное пространство </div>
+												<div class="tab__value spans-highlight sq">1м<sup class="txt-10">2</sup></div>
 <!--												<div class="tab__key rent-content__tab-key rent-content__tab-dot">свободное пространство - <span class="spans-highlight">1м<sup class="txt-10">2</sup></span></div>-->
 											</div>
 											<div class="second-screen__tab tab rent-content__conditionals-tab">
 												<div class="tab__dot tab__dot--rent"></div>
-												<div class="tab__key rent-content__tab-key">питание - </div>
+												<div class="tab__key rent-content__tab-key">питание </div>
 												<div class="tab__value spans-highlight">220В</div>
 <!--												<div class="tab__key rent-content__tab-key rent-content__tab-dot">питание - <span class="spans-highlight">220В</span></div>-->
 											</div>
